[package]
authors = ['The ChainX Authors']
edition = "2018"
name = "mast"
version = "0.1.0"

[dependencies]
arrayref = { version = "0.3.6" }
bech32 = { version = "0.8.1" }
core2 = { version = "0.3.0", default-features = false, features = ["alloc"] }
digest = { version = "0.9.0", default-features = false }
sha2 = { version = "0.9.5", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
rand = { version = "0.8.4", default-features = false, features = ["alloc"] }
rand_core = { version = "0.6.3", default-features = false, features = ["alloc"] }

bitcoin_hashes = { version = "0.10.0", default-features = false, features = ["alloc"] }
musig2 = { git = "https://github.com/chainx-org/Musig2.git", branch = "lib" }

[features]
default = ['std', 'getrandom']
getrandom = ['rand/getrandom']
std = [
    "bitcoin_hashes/std",
    "hex/std",
]
no-std = [
    "bitcoin_hashes/alloc",
    "core2/alloc",
]
